Make sure long links can be broken into several lines

--- a/assets/sass/components/chat/_messages.scss
+++ b/assets/sass/components/chat/_messages.scss
@@ -13,6 +13,7 @@
 
   .message_text {
     margin-bottom: 0.4rem;
+    overflow-wrap: break-word;
 
     a {
       color: var(--text-color);
